[gd_scene load_steps=5 format=3 uid="uid://owvpn1g18mh6"]

[ext_resource type="Texture2D" uid="uid://8bgkfaopnf6s" path="res://Sprites/Sheets/Ship_Lancer.png" id="1_8emfx"]
[ext_resource type="Script" path="res://Scripts/Game/enemy_lancer.gd" id="1_rkfx8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u2ge1"]
radius = 22.0
height = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbnx5"]
size = Vector2(43, 40)

[node name="EnemyLancer" type="Area2D"]
process_mode = 3
script = ExtResource("1_rkfx8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8emfx")
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 0)
shape = SubResource("CapsuleShape2D_u2ge1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(30.5, 0)
shape = SubResource("RectangleShape2D_hbnx5")

[node name="MuzzleMain" type="Node2D" parent="."]
position = Vector2(15, 0)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleMain"]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="MuzzleLeft" type="Node2D" parent="."]
position = Vector2(51, -15)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleLeft"]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="MuzzleRight" type="Node2D" parent="."]
position = Vector2(51, 15)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleRight"]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(10, 8.116)

[node name="Shoot" type="Timer" parent="."]

[node name="ShootAlt" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="ShootAlt" to="." method="_on_shoot_alt_timeout"]
